# sermon-finder

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
sermon_finder/: analyzer.py  audio.py  cli.py  diarizer.py  transcriber.py
tests/: conftest.py  test_analyzer.py  test_audio.py  test_cli.py  test_diarizer.py  test_transcriber.py  test_validator.py
tools/: benchmark.py
